# planning-center-alfred

./: LICENSE.txt  Planning Center for Alfred.alfredworkflow  README.md  packager.json  pyproject.toml  requirements.txt
pca/: copy_email.py  copy_phone.py  core.py  filter_people.py
